# FileSearch

./: README.md  meson.build  org.gnome.FSearch.json
data/: meson.build  org.gnome.FSearch.desktop.in  org.gnome.FSearch.gschema.xml  org.gnome.FSearch.metainfo.xml.in  org.gnome.FSearch.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  filesearch.gresource.xml  main.vala  meson.build  window.ui  window.vala
